--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <h1>i love Nishat!!</h1>
+    <h1>Nishat is my love</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
